[FIX] web_studio: display a scrollbar if there are many selections
On the modal displaying the selections for the creation of a selection field,
if there were too many selections the overflow would make confirmation
impossible, as well as being ugly.

opw 1892073

closes odoo/enterprise#2819

--- a/web_studio/static/src/scss/new_field_dialog.scss
+++ b/web_studio/static/src/scss/new_field_dialog.scss
@@ -2,9 +2,6 @@
     .modal-header, .modal-footer {
         background-color: lighten(gray('200'), 5%);
     }
-    .modal-body {
-        overflow: visible !important;
-    }
 
     .o_web_studio_field_dialog_form {
         padding: 35px 18px 25px 16px;
